[tool.poetry]
name = "vanity-hdwallet"
version = "0.1.0"
description = "Vanity hierarchical deterministic wallet generator"
authors = ["Tino Martínez Molina <tino@martinezmolina.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
humanfriendly = "^10.0"
bip44 = "^0.1.3"
bech32 = "^1.2.0"
web3 = "^6.0.0"
mnemonic = "^0.20"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.11.3"
black = "^22.12.0"
pytest = "^7.2.1"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.isort]
profile="black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
