[project]
name = "vanity-hdwallet"
version = "0.1.0"
description = "Vanity hierarchical deterministic wallet generator"
authors = [{ name = "Tino Martínez Molina", email = "tino@martinezmolina.es" }]
requires-python = "<4.0,>=3.10"
readme = "README.md"
dependencies = [
    "humanfriendly<11.0,>=10.0",
    "bip44<1.0.0,>=0.1.3",
    "bech32<2.0.0,>=1.2.0",
    "web3<7.0.0,>=6.0.0",
    "mnemonic<1.0,>=0.20",
]

[dependency-groups]
dev = [
    "mypy<1.0,>=0.991",
    "isort<6.0.0,>=5.11.3",
    "black<23.0.0,>=22.12.0",
    "pytest<8.0.0,>=7.2.1",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
