[project]
name = "vanity-hdwallet"
version = "0.1.0"
description = "Vanity hierarchical deterministic wallet generator"
authors = [{ name = "Tino Martínez Molina", email = "tino@martinezmolina.es" }]
requires-python = "<4.0,>=3.10"
readme = "README.md"
dependencies = [
    "humanfriendly<11.0,>=10.0",
    "bip44<1.0.0,>=0.1.3",
    "bech32<2.0.0,>=1.2.0",
    "web3<7.0.0,>=6.0.0",
    "mnemonic<1.0,>=0.20",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".venv"]

[tool.ruff.lint]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
